--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -65,6 +65,7 @@ layout: default
         </div>
         {% endif %}
 
+        {% comment %}
         <!-- tags -->
         {% if page.tags.size > 0 %}
         <div class="post-tags">
@@ -77,6 +78,7 @@ layout: default
           {% endfor %}
           </div>
         {% endif %}
+        {% endcomment %}
 
         <div class="post-tail-bottom
           d-flex justify-content-between align-items-center mt-3 pt-5 pb-2">
