--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@ layout: compress
 
         {% include footer.html %}
 
-      </div>
+      </div> <!-- #main -->
 
       {% include search-results.html %}
 
