--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -18,7 +18,7 @@
       this.page.title = '{{ page.title }}';
       this.page.url = '{{ page.url | absolute_url }}';
       {% if page.redirect_from[0] %}
-      this.page.identifier = '{{ page.redirect_from[0] }}';
+      this.page.identifier = 'https://blog.bruchez.name{{ page.redirect_from[0] }}';
       {% else %}
       this.page.identifier = '{{ page.url }}';
       {% endif %}
