--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,6 +40,16 @@ layout: default
 
         </div>
 
+        <!-- categories -->
+        {% if page.categories.size > 0 %}
+        <div class="post-meta mb-3">
+          {% for category in page.categories %}
+            <a href='{{ site.baseurl }}/categories/{{ category | slugify | url_encode }}/'>{{ category }}</a>
+            {%- unless forloop.last -%}, {%- endunless -%}
+          {% endfor %}
+        </div>
+        {% endif %}
+
       </div> <!-- .post-meta -->
 
       <div class="post-content">
