--- a/_includes/js-selector.html
+++ b/_includes/js-selector.html
@@ -29,7 +29,7 @@
 
 {% if jekyll.environment == 'production' %}
   <!-- PWA -->
-  <script defer src="{{ '/app.js' | relative_url }}"></script>
+<!--  <script defer src="{{ '/app.js' | relative_url }}"></script>-->
 
   <!-- GA -->
   {% if site.google_analytics.id %}
